tests/NormalTests/paczka1/small_fuzzy/73178441.err
Error in line 1: Kh4DFrPpNOL A114 50,5
Error in line 5: Y3pY A114 942,2
